# haskell-ethereum-assembly

./: ChangeLog.md  README.md  hassembly-evm.cabal  stack.yaml
app/: Main.hs
examples/: allInst.hs  compose.hs  delegateCall.hs  hostLangage.hs  pprList.hs  pseudoInst.hs  userDefine.hs  userFlow.hs  userFunction.hs  userSyntax.hs
src/Language/: Evm.hs
src/Language/Evm/: IR.hs  Instructions.hs  Internal.hs  Opcodes.hs  Opecode.hs  Ppr.hs  Types.hs  Utils.hs
